feat: add html structure

--- a/index.html
+++ b/index.html
@@ -4,12 +4,68 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5"/>
 
-    <link rel="icon" href="devchallenges.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
+    <link rel="icon" type="image/x-icon" href="img/devchallenges.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
 
-    <title>Devchallenges Team Page</title>
+    <link rel="stylesheet" href="css/styles.css">
+
+    <title>DevChallenges - Team Page</title>
   </head>
   <body>
+    <header class="header">
+      <h1 class="header__title">The creative crew</h1>
+      <div class="header__desc-box">
+        <h2 class="header__subtitle">Who we are</h2>
+        <p class="header__desc">We are team of creatively diverse.  driven.  innovative individuals working in various locations from the world.
+        </p>
+      </div>
+    </header>
+    <section class="wrapper">
+      <div class="wrapper__crew-member">
+        <figure class="wrapper__image-box">
+          <img src="img/photo1.png" alt="picture of a crew member" class="wrapper__image">
+          <figcaption class="wrapper__crew-name">Bill Mahoney</figcaption>
+        </figure>
+        <span class="wrapper__crew-job">Product owner</span>
+      </div>
+      <div class="wrapper__crew-member">
+        <figure class="wrapper__image-box">
+          <img src="img/photo2.png" alt="picture of a crew member" class="wrapper__image">
+          <figcaption class="wrapper__crew-name">Saba Cabrera</figcaption>
+        </figure>
+        <span class="wrapper__crew-job">Art director</span>
+      </div>
+      <div class="wrapper__crew-member">
+        <figure class="wrapper__image-box">
+          <img src="img/photo3.png" alt="picture of a crew member" class="wrapper__image">
+          <figcaption class="wrapper__crew-name">Shae Le</figcaption>
+        </figure>
+        <span class="wrapper__crew-job">Tech Lead</span>
+      </div>
+      <div class="wrapper__crew-member">
+        <figure class="wrapper__image-box">
+          <img src="img/photo4.png" alt="picture of a crew member" class="wrapper__image">
+          <figcaption class="wrapper__crew-name">Skylah Lu</figcaption>
+        </figure>
+        <span class="wrapper__crew-job">UX Designer</span>
+      </div>
+      <div class="wrapper__crew-member">
+        <figure class="wrapper__image-box">
+          <img src="img/photo5.png" alt="picture of a crew member" class="wrapper__image">
+          <figcaption class="wrapper__crew-name">Griff Richards</figcaption>
+        </figure>
+        <span class="wrapper__crew-job">Developer</span>
+      </div>
+      <div class="wrapper__crew-member">
+        <figure class="wrapper__image-box">
+          <img src="img/photo6.png" alt="picture of a crew member" class="wrapper__image">
+          <figcaption class="wrapper__crew-name">Stan John</figcaption>
+        </figure>
+        <span class="wrapper__crew-job">Developer</span>
+      </div>
+    </section>
+    <footer class="footer">
+      <p class="footer__text">created by <a href="https://twitter.com/thedevsousa" target="_blank">DevSousa</a> - devChallenges.io</p>
+    </footer>
   </body>
 </html>
